# apps/backend/src/controllers/auth.ts
@@ -4,23 +4,30 @@ import {
   UserNotFoundError,
 } from "@/errors/auth.ts";
 import prisma from "@/lib/prisma.ts";
-import type { CreateUser, UpdateEmail } from "@/types/auth.ts";
+import type { CreateUser, UpdateEmail, UpdatePassword } from "@/types/auth.ts";
 import bcrypt from "@node-rs/bcrypt";
 import type { User } from "@prisma/client";
 // implement Oauth2 flow
 
-export const createUserController = async (data: CreateUser) => {
+export const createUser = async (data: CreateUser) => {
   const { email, password } = data;
   const hashedPassword = bcrypt.hashSync(password, 10);
-  return await prisma.user.create({
+
+  const user = await prisma.user.create({
     data: {
       email,
       password: hashedPassword,
     },
   });
+
+  if (!user) {
+    throw new Error("User not created.");
+  }
+
+  return user;
 };
 
-export const getUserController = async ({ id }: { id: string }) => {
+export const getUser = async ({ id }: { id: string }) => {
   const user: User | null = await prisma.user.findUnique({
     where: {
       id,
@@ -34,7 +41,7 @@ export const getUserController = async ({ id }: { id: string }) => {
   return user;
 };
 
-export const updateEmailController = async ({
+export const updateEmail = async ({
   id,
   data,
 }: {
@@ -48,12 +55,8 @@ export const updateEmailController = async ({
   }
 
   const userPassword = await prisma.user.findUnique({
-    where: {
-      id,
-    },
-    select: {
-      password: true,
-    },
+    where: { id },
+    select: { password: true },
   });
 
   if (!userPassword) {
@@ -65,11 +68,40 @@ export const updateEmailController = async ({
   }
 
   return await prisma.user.update({
-    where: {
-      id,
-    },
-    data: {
-      email: newEmail,
-    },
+    where: { id },
+    data: { email: newEmail },
+  });
+};
+
+export const updatePassword = async ({
+  id,
+  data,
+}: {
+  id: string;
+  data: UpdatePassword;
+}) => {
+  const { newPassword, actualPassword } = data;
+
+  if (!actualPassword) {
+    throw new PasswordRequiredError();
+  }
+
+  const userPassword = await prisma.user.findUnique({
+    where: { id },
+    select: { password: true },
+  });
+
+  if (!userPassword) {
+    throw new UserNotFoundError();
+  }
+
+  if (!bcrypt.compareSync(actualPassword, userPassword.password)) {
+    throw new PasswordsAreNotMatchError();
+  }
+
+  const hashedPassword = bcrypt.hashSync(newPassword, 10);
+  return await prisma.user.update({
+    where: { id },
+    data: { password: hashedPassword },
   });
 };
